implementerd add post, search autocomplete, community page, likes and comment

--- a/Desktop/GoTrip/app.json
+++ b/Desktop/GoTrip/app.json
@@ -36,6 +36,9 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "googleMapsApiKey": "AIzaSyDOkh_o7VNClpnHjKb0aMR0tpGQZjZ9hLE"
     }
   }
 }
