--- a/Desktop/GoTrip/package.json
+++ b/Desktop/GoTrip/package.json
@@ -23,7 +23,9 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "expo": "~52.0.31",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
@@ -36,6 +38,8 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "express": "^4.21.2",
+    "firebase": "^11.3.1",
     "ionicons": "^7.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
